--- a/plots.ipynb
+++ b/plots.ipynb
@@ -16,27 +16,37 @@
  },
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-24T13:45:46.914357Z",
+     "start_time": "2024-10-24T13:45:46.753211Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 1,
+   "outputs": []
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-24T13:47:27.535190Z",
+     "start_time": "2024-10-24T13:47:27.533267Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "epoch = 600\n",
     "path = 'results'\n",
-    "tasks = ['push', 'stack', 'hit']\n",
+    "tasks = ['push', 'hit', 'stack']\n",
     "#models = ['b1', 'b2', 'lp',  'lpe-k=0.1', 'lpe-k=1', 'lpe-k=10']\n",
-    "models = ['b1', 'b2', 'lp']"
+    "models = ['mlp', 'rand-int', 'lp-int']"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 5,
+   "outputs": []
   },
   {
    "metadata": {},
@@ -60,11 +70,16 @@
     "# ax[1].legend()\n",
     "# plt.show()"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-24T13:47:29.604303Z",
+     "start_time": "2024-10-24T13:47:29.601463Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "num_seeds = 10\n",
@@ -74,18 +89,28 @@
     "model_losses_seeds = np.zeros((10, len(models), epoch))\n",
     "model_energies_seeds = np.zeros((10, len(models)))"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 6,
+   "outputs": []
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-24T13:47:31.500761Z",
+     "start_time": "2024-10-24T13:47:31.497743Z"
+    }
+   },
    "cell_type": "code",
    "source": "mode = 'train'",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 7,
+   "outputs": []
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-24T13:47:33.620468Z",
+     "start_time": "2024-10-24T13:47:32.527799Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "plt.figure(1)\n",
@@ -111,11 +136,16 @@
     "\n",
     "plt.show()"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 8,
+   "outputs": []
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-24T13:47:52.458855Z",
+     "start_time": "2024-10-24T13:47:52.347542Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# All seeds model avg\n",
@@ -137,8 +167,8 @@
     "# plt.savefig('plotresults/allseeds.png')\n",
     "plt.show()"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 9,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -174,10 +204,14 @@
     "plt.show()\n"
    ],
    "metadata": {
-    "id": "IywKri3dTp8N"
+    "id": "IywKri3dTp8N",
+    "ExecuteTime": {
+     "end_time": "2024-10-24T13:48:37.071055Z",
+     "start_time": "2024-10-24T13:48:36.772228Z"
+    }
    },
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 10,
+   "outputs": []
   }
  ]
 }
