major update, blocked training module added.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,57 +1,93 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-09T09:36:03.587871Z",
+     "start_time": "2024-11-09T09:36:03.548274Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import numpy as np",
+   "id": "35db052e4726fc1c",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-11-09T09:36:04.631849Z",
+     "start_time": "2024-11-09T09:36:04.629449Z"
+    }
    },
-   "source": "opts = {}",
-   "execution_count": null,
-   "outputs": []
+   "source": "task_order = np.zeros(5030, dtype=int)",
+   "outputs": [],
+   "execution_count": 2
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "opts[\"size\"] = 12",
-   "id": "40e7fda24a1fcf61",
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-09T09:36:05.756574Z",
+     "start_time": "2024-11-09T09:36:05.753673Z"
+    }
+   },
    "cell_type": "code",
    "source": [
-    "opts[\"hidden_dim\"] = 128\n",
-    "opts[\"depth\"] = 3"
+    "task_order[:1510] = 0\n",
+    "task_order[1510:3020] = 1\n",
+    "task_order[3020:] = 2"
    ],
-   "id": "b09a3fef45c4d2db",
-   "execution_count": null,
-   "outputs": []
+   "id": "a82f40306328188c",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-09T09:36:07.064363Z",
+     "start_time": "2024-11-09T09:36:07.058980Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "task_order",
+   "id": "7745a60f097bef5c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 2, 2, 2])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-09T09:36:10.381109Z",
+     "start_time": "2024-11-09T09:36:10.377926Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.save('task_order.npy', task_order)",
+   "id": "b818a1a1313acbc8",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "opts[\"rep_dim\"] = 4",
-   "id": "17092b3f0db8e083",
+   "outputs": [],
    "execution_count": null,
-   "outputs": []
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "layer_info = [[opts[\"size\"]**2] + [opts[\"hidden_dim\"]]*opts[\"depth\"] + [opts[\"rep_dim\"]]]",
-   "id": "9994158dd0efcd1",
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "layer_info",
-   "id": "52813e401e87c8fe",
-   "execution_count": null,
-   "outputs": []
+   "source": "",
+   "id": "c8b1a96ce256cfd3"
   }
  ],
  "metadata": {
