--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -34,7 +34,7 @@
     "path = 'results/training/'\n",
     "tasks = ['push', 'hit', 'stack']\n",
     "#models = ['b1', 'b2', 'lp',  'lpe-k=0.1', 'lpe-k=1', 'lpe-k=10']\n",
-    "models = ['vanillamlp', 'imtl-lp']"
+    "models = ['vanillamlp', 'imtl-rand', 'imtl-lp', 'imtl-lpe']"
    ],
    "outputs": [],
    "execution_count": null
@@ -69,7 +69,7 @@
    "cell_type": "code",
    "source": [
     "num_seeds = 10\n",
-    "seeds = [3765, 88664, 13514, 41521, 76001, 79916,  7991, 67749, 59685, 63475]\n",
+    "seeds = [66094,  8571, 65138, 61881, 85675, 29433, 46911, 51577, 92058, 36322]\n",
     "task_losses_seeds = np.zeros((num_seeds, len(models), 3, epoch + pre_train))\n",
     "task_energies_seeds = np.zeros((num_seeds, len(models), 3))\n",
     "model_losses_seeds = np.zeros((10, len(models), epoch + pre_train))\n",
