untracked and retracked files in .gitignore

--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -30,11 +30,11 @@
    "cell_type": "code",
    "source": [
     "pre_train = 10\n",
-    "epoch = 1000\n",
+    "epoch = 3000\n",
     "path = 'results/training/'\n",
     "tasks = ['push', 'hit', 'stack']\n",
     "#models = ['b1', 'b2', 'lp',  'lpe-k=0.1', 'lpe-k=1', 'lpe-k=10']\n",
-    "models = ['vanillamlp', 'imtl-rand', 'imtl-lp', 'imtl-lpe']"
+    "models = ['singletask', 'imtl-lp']"
    ],
    "outputs": [],
    "execution_count": null
@@ -68,12 +68,12 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "num_seeds = 10\n",
-    "seeds = [66094,  8571, 65138, 61881, 85675, 29433, 46911, 51577, 92058, 36322]\n",
+    "num_seeds = 5\n",
+    "seeds = [5398, 36612, 78496, 75858, 26140]\n",
     "task_losses_seeds = np.zeros((num_seeds, len(models), 3, epoch + pre_train))\n",
     "task_energies_seeds = np.zeros((num_seeds, len(models), 3))\n",
-    "model_losses_seeds = np.zeros((10, len(models), epoch + pre_train))\n",
-    "model_energies_seeds = np.zeros((10, len(models)))"
+    "model_losses_seeds = np.zeros((num_seeds, len(models), epoch + pre_train))\n",
+    "model_energies_seeds = np.zeros((num_seeds, len(models)))"
    ],
    "outputs": [],
    "execution_count": null
