cnn version + img dataset

--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -22,8 +22,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "metadata": {},
@@ -34,10 +34,10 @@
     "path = 'results/training/'\n",
     "tasks = ['push', 'hit', 'stack']\n",
     "#models = ['b1', 'b2', 'lp',  'lpe-k=0.1', 'lpe-k=1', 'lpe-k=10']\n",
-    "models = ['singletask', 'imtl-lp']"
+    "models = ['singletask', 'imtl-rand']"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "metadata": {},
@@ -61,29 +61,29 @@
     "# ax[1].legend()\n",
     "# plt.show()"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "num_seeds = 5\n",
-    "seeds = [5398, 36612, 78496, 75858, 26140]\n",
+    "num_seeds = 10\n",
+    "seeds = [9236, 1681, 3342, 7387, 3815, 1740, 1194, 3893, 4552, 6278]\n",
     "task_losses_seeds = np.zeros((num_seeds, len(models), 3, epoch + pre_train))\n",
     "task_energies_seeds = np.zeros((num_seeds, len(models), 3))\n",
     "model_losses_seeds = np.zeros((num_seeds, len(models), epoch + pre_train))\n",
     "model_energies_seeds = np.zeros((num_seeds, len(models)))"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": "mode = 'train'",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "metadata": {},
@@ -112,8 +112,8 @@
     "\n",
     "plt.show()"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "metadata": {},
@@ -138,8 +138,8 @@
     "# plt.savefig('plotresults/allseeds.png')\n",
     "plt.show()"
    ],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -177,15 +177,15 @@
    "metadata": {
     "id": "IywKri3dTp8N"
    },
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": "",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   }
  ]
 }
