--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3,15 +3,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-09T09:36:03.587871Z",
-     "start_time": "2024-11-09T09:36:03.548274Z"
+     "end_time": "2024-12-16T10:24:33.965220Z",
+     "start_time": "2024-12-16T10:24:33.930480Z"
     }
    },
    "cell_type": "code",
    "source": "import numpy as np",
    "id": "35db052e4726fc1c",
-   "execution_count": 1,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -19,64 +19,107 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-09T09:36:04.631849Z",
-     "start_time": "2024-11-09T09:36:04.629449Z"
+     "end_time": "2024-12-16T10:24:33.968209Z",
+     "start_time": "2024-12-16T10:24:33.965823Z"
     }
    },
-   "source": "task_order = np.zeros(5030, dtype=int)",
-   "execution_count": 2,
-   "outputs": []
+   "source": [
+    "task_order = np.zeros(3030, dtype=int)\n",
+    "perm = [0, 2, 1]"
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-09T09:36:05.756574Z",
-     "start_time": "2024-11-09T09:36:05.753673Z"
+     "end_time": "2024-12-16T10:24:33.975906Z",
+     "start_time": "2024-12-16T10:24:33.968593Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ext_ = ''.join(map(str,perm))",
+   "id": "d8b45aa7442aff65",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T10:24:33.984377Z",
+     "start_time": "2024-12-16T10:24:33.976462Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ext_",
+   "id": "15569a39dffda180",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'021'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T10:24:33.991539Z",
+     "start_time": "2024-12-16T10:24:33.984726Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "task_order[:1510] = 0\n",
-    "task_order[1510:3020] = 1\n",
-    "task_order[3020:] = 2"
+    "task_order[:1010] = perm[0]\n",
+    "task_order[1010:2020] = perm[1]\n",
+    "task_order[2020:] = perm[2]"
    ],
    "id": "a82f40306328188c",
-   "execution_count": 3,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-09T09:36:07.064363Z",
-     "start_time": "2024-11-09T09:36:07.058980Z"
+     "end_time": "2024-12-16T10:24:33.999281Z",
+     "start_time": "2024-12-16T10:24:33.991857Z"
     }
    },
    "cell_type": "code",
    "source": "task_order",
    "id": "7745a60f097bef5c",
-   "execution_count": 4,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 1, 1, 1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-09T09:36:10.381109Z",
-     "start_time": "2024-11-09T09:36:10.377926Z"
+     "end_time": "2024-12-16T10:24:34.006454Z",
+     "start_time": "2024-12-16T10:24:33.999619Z"
     }
    },
    "cell_type": "code",
-   "source": "np.save('task_order.npy', task_order)",
+   "source": "np.save('task-order-{}.npy'.format(ext_), task_order)",
    "id": "b818a1a1313acbc8",
-   "execution_count": 5,
-   "outputs": []
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "execution_count": null,
-   "source": "",
-   "id": "c8b1a96ce256cfd3",
-   "outputs": []
+   "outputs": [],
+   "execution_count": 7
   }
  ],
  "metadata": {
