--- a/skilltransfer.ipynb
+++ b/skilltransfer.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T12:05:31.472444Z",
-     "start_time": "2025-03-05T12:05:31.468732Z"
+     "end_time": "2025-04-27T13:47:34.856962Z",
+     "start_time": "2025-04-27T13:47:34.854647Z"
     }
    },
    "cell_type": "code",
@@ -17,23 +17,197 @@
    "outputs": []
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-27T13:47:35.595319Z",
+     "start_time": "2025-04-27T13:47:35.591968Z"
+    }
+   },
    "cell_type": "code",
    "source": "import seaborn as sns",
    "id": "cef7b695d5330a94",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": []
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-27T14:19:59.706693Z",
+     "start_time": "2025-04-27T14:19:59.703321Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# -----------------------------\n",
+    "# 1. Load & aggregate 10 seeds\n",
+    "# -----------------------------\n",
+    "seeds = [8302, 2766, 257, 7600, 6657, 8226, 6841, 4908, 1321, 7857]\n",
+    "num_seeds = len(seeds)"
+   ],
+   "id": "b41fbbdeb7aae958",
+   "execution_count": 3,
+   "outputs": []
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-27T14:20:06.148635Z",
+     "start_time": "2025-04-27T14:20:05.358874Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "all_dicts = []\n",
+    "for seed in seeds:\n",
+    "    # Replace the filename pattern as appropriate\n",
+    "    file_path = f\"seed-{seed}-transfer-one-obj.npy\"\n",
+    "    data = np.load(file_path, allow_pickle=True).item()\n",
+    "    all_dicts.append(data)\n",
+    "\n",
+    "# -----------------------------\n",
+    "# 2. Average the nested dicts\n",
+    "# -----------------------------\n",
+    "# We'll create an averaged dictionary (average_dict)\n",
+    "average_dict = {}\n",
+    "\n",
+    "for seed_dict in all_dicts:\n",
+    "    for obj_name, affected_tasks_dict in seed_dict.items():\n",
+    "        if obj_name not in average_dict:\n",
+    "            average_dict[obj_name] = {}\n",
+    "        for affected_task, affecting_tasks_dict in affected_tasks_dict.items():\n",
+    "            if affected_task not in average_dict[obj_name]:\n",
+    "                average_dict[obj_name][affected_task] = {}\n",
+    "            for affecting_task, diff_value in affecting_tasks_dict.items():\n",
+    "                if affecting_task not in average_dict[obj_name][affected_task]:\n",
+    "                    average_dict[obj_name][affected_task][affecting_task] = 0.0\n",
+    "                # Accumulate the difference value\n",
+    "                average_dict[obj_name][affected_task][affecting_task] += diff_value * 100 # (cm)\n",
+    "\n",
+    "# Now divide by the number of seeds to get the average\n",
+    "for obj_name, affected_tasks_dict in average_dict.items():\n",
+    "    for affected_task, affecting_tasks_dict in affected_tasks_dict.items():\n",
+    "        for affecting_task in affecting_tasks_dict:\n",
+    "            average_dict[obj_name][affected_task][affecting_task] /= num_seeds\n",
+    "\n",
+    "# -----------------------------\n",
+    "# 3. Prepare for visualization\n",
+    "# -----------------------------\n",
+    "# Suppose we know there are exactly 3 tasks (any labels you have):\n",
+    "task_row = [\"push\", \"hit\"]\n",
+    "task_column = [\"push\", \"hit\", \"stack\"]\n",
+    "\n",
+    "# We'll gather all objects from the averaged dictionary\n",
+    "objects_list = list(average_dict.keys())\n",
+    "num_objects = len(objects_list)\n",
+    "\n",
+    "# We'll gather all off-diagonal values to find global min and max\n",
+    "all_values = []\n",
+    "for obj_name in objects_list:\n",
+    "    for affected_task in task_row:\n",
+    "        for affecting_task in task_column:\n",
+    "            if affected_task != affecting_task:\n",
+    "                val = average_dict[obj_name][affected_task].get(affecting_task, 0.0)\n",
+    "                all_values.append(val)\n",
+    "\n",
+    "# Compute global min and max to ensure a shared color scale\n",
+    "global_min = min(all_values) if all_values else 0.0\n",
+    "global_max = max(all_values) if all_values else 1.0\n",
+    "\n",
+    "# -----------------------------\n",
+    "# 4. Plot each object as 3x3\n",
+    "# -----------------------------\n",
+    "fig, axes = plt.subplots(\n",
+    "    1, num_objects,\n",
+    "    figsize=(20, 3),  # Adjust figure size to fit subplots\n",
+    "    squeeze=False\n",
+    ")\n",
+    "\n",
+    "for idx, obj_name in enumerate(objects_list):\n",
+    "    ax = axes[0, idx]  # We used a single row: row=0, column=idx\n",
+    "    \n",
+    "    # Initialize a 3x3 matrix for this object\n",
+    "    matrix = np.zeros((2, 3), dtype=float)\n",
+    "    \n",
+    "    # Fill the matrix:\n",
+    "    #   rows => affected task (i)\n",
+    "    #   cols => affecting task (j)\n",
+    "    #\n",
+    "    # The diagonal is 0 by definition, so if row == col: 0\n",
+    "    # Otherwise, use the difference in average_dict\n",
+    "    for i, affected_task in enumerate(task_row):\n",
+    "        for j, affecting_task in enumerate(task_column):\n",
+    "            if i != j:\n",
+    "                # Safely get the value; default to 0 if not found\n",
+    "                matrix[i, j] = average_dict[obj_name][affected_task].get(affecting_task, 0.0)\n",
+    "            else:\n",
+    "                matrix[i, j] = np.nan\n",
+    "    mask = np.isnan(matrix)\n",
+    "    \n",
+    "    a = sns.heatmap(\n",
+    "        matrix, \n",
+    "        ax=ax, \n",
+    "        mask=mask,\n",
+    "        annot=True, \n",
+    "        fmt=\".4f\", \n",
+    "        cmap=\"viridis\", \n",
+    "        vmin=global_min,   # use global min\n",
+    "        vmax=global_max,   # use global max\n",
+    "        cbar=False,        # disable individual subplot colorbar\n",
+    "        xticklabels=task_column, \n",
+    "        yticklabels=task_row,\n",
+    "        annot_kws={'size': 14},   # Increase annotation (cell text) size\n",
+    "    )\n",
+    "    a.set_facecolor('black')\n",
+    "    a.grid(False)\n",
+    "    \n",
+    "     # Rotate X labels if desired\n",
+    "    plt.setp(ax.get_xticklabels(), rotation=45, ha=\"right\")\n",
+    "\n",
+    "    ax.set_title(f\"Object: {obj_name}\", fontsize=16)\n",
+    "    ax.tick_params(axis='both', labelsize=12)\n",
+    "\n",
+    "sm = plt.cm.ScalarMappable(\n",
+    "    cmap=\"viridis\",\n",
+    "    norm=plt.Normalize(vmin=global_min, vmax=global_max)\n",
+    ")\n",
+    "sm.set_array([])  # Required for older matplotlib versions\n",
+    "\n",
+    "# Place the colorbar below all subplots (horizontal)\n",
+    "cbar = fig.colorbar(\n",
+    "    sm,\n",
+    "    ax=axes.ravel().tolist(),      # all subplot axes\n",
+    "    orientation='horizontal',\n",
+    "    fraction=0.05,                 # thickness as a fraction of the plot\n",
+    "    pad=0.3,                       # space between subplots & colorbar\n",
+    "    aspect=30                      # aspect ratio can help increase length\n",
+    ")\n",
+    "n_ticks = 5\n",
+    "ticks = np.linspace(global_min, global_max, n_ticks)\n",
+    "cbar.set_ticks(ticks)\n",
+    "# Adjust tick font size\n",
+    "cbar.ax.tick_params(labelsize=12)\n",
+    "\n",
+    "# plt.tight_layout()\n",
+    "plt.savefig(\"one-obj-transfer.png\", bbox_inches='tight')\n",
+    "plt.show()"
+   ],
+   "id": "506d2653dc91a417",
+   "execution_count": 4,
+   "outputs": []
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-27T14:23:48.506453Z",
+     "start_time": "2025-04-27T14:23:47.722536Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# -----------------------------\n",
     "# 1. Load & aggregate 10 seeds\n",
     "# -----------------------------\n",
     "all_dicts = []\n",
-    "seeds = [8302, 2766, 257, 7600, 6657, 8226, 6841, 4908, 1321, 7857]\n",
-    "num_seeds = len(seeds)\n",
     "\n",
     "for seed in seeds:\n",
     "    # Replace the filename pattern as appropriate\n",
@@ -131,7 +305,7 @@
     "     # Rotate X labels if desired\n",
     "    plt.setp(ax.get_xticklabels(), rotation=45, ha=\"right\")\n",
     "\n",
-    "    ax.set_title(f\"{target_obj_name}\", fontsize=16)\n",
+    "    ax.set_title(f\"Target: {target_obj_name}\", fontsize=16)\n",
     "    ax.tick_params(axis='both', labelsize=12)\n",
     "    if idx != 0:\n",
     "        ax.set_yticklabels([])\n",
@@ -162,7 +336,7 @@
     "plt.show()\n"
    ],
    "id": "3c0487d60125a405",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": []
   },
   {
