--- a/blockedvsimtl.ipynb
+++ b/blockedvsimtl.ipynb
@@ -2,12 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:14.412973Z",
-     "start_time": "2025-03-13T12:36:14.250558Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
@@ -15,48 +10,41 @@
     "import os\n",
     "mpl.rcParams['savefig.dpi'] = 300"
    ],
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:14.416166Z",
-     "start_time": "2025-03-13T12:36:14.413587Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "pre_train = 10\n",
     "epoch = 3000\n",
     "path = 'results/training/'\n",
     "tasks = ['Push', 'Hit', 'Stack']\n",
     "task_order = ['-012', '-021', '-102', '-120', '-201', '-210']\n",
-    "task_order_names = ['Push-Hit-Stack', 'Push-Stack-Hit', 'Hit-Push-Stack',\n",
-    "                    'Hit-Stack-Push','Stack-Push-Hit','Stack-Hit-Push']\n",
+    "# task_order_names = ['Push-Hit-Stack', 'Push-Stack-Hit', 'Hit-Push-Stack',\n",
+    "#                     'Hit-Stack-Push','Stack-Push-Hit','Stack-Hit-Push']\n",
     "\n",
-    "legend_label = ['BLOCK', 'INTER-RAND', 'INTER-LP']\n",
-    "models = ['blocked', 'imtl-rand', 'imtl-lp']\n",
+    "task_order_abbrv = [['P', 'H', 'S'], ['P', 'S', 'H'], ['H', 'P', 'S'],\n",
+    "                    ['H', 'S', 'P'], ['S', 'P', 'H'], ['S', 'H', 'P']]\n",
+    "\n",
+    "legend_label = ['BLOCK', 'INTER-LP']\n",
+    "models = ['blocked', 'imtl-lp']\n",
     "model_colors = {'imtl-rand': '#009988',\n",
     "                'imtl-lp': '#cc3311', 'blocked': '#ee3377'}\n",
-    "plot_subpath = \"paperversionplot/blockedvsimtl\""
+    "plot_subpath = \"blockedvsimtl/\""
    ],
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:14.428158Z",
-     "start_time": "2025-03-13T12:36:14.416524Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "if not os.path.exists(plot_subpath):\n",
     "    os.makedirs(plot_subpath)"
    ],
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -68,12 +56,7 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:14.436163Z",
-     "start_time": "2025-03-13T12:36:14.428931Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# seed = 0\n",
     "# model_name = \"lpe-k=1-seed-{}\".format(seed)\n",
@@ -93,17 +76,12 @@
     "# ax[1].legend()\n",
     "# plt.show()"
    ],
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:14.444880Z",
-     "start_time": "2025-03-13T12:36:14.436904Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "num_seeds = 10\n",
     "seeds = [8302, 2766,  257, 7600, 6657, 8226, 6841, 4908, 1321, 7857]\n",
@@ -112,31 +90,21 @@
     "model_losses_seeds = np.zeros((len(task_order), num_seeds, len(models), epoch + pre_train))\n",
     "model_energies_seeds = np.zeros((len(task_order), num_seeds, len(models)))"
    ],
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:14.452712Z",
-     "start_time": "2025-03-13T12:36:14.445758Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "mode = 'train'"
    ],
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:14.488508Z",
-     "start_time": "2025-03-13T12:36:14.453921Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# plt.figure(1)\n",
     "for o, order in enumerate(task_order):\n",
@@ -164,78 +132,79 @@
     "\n",
     "# plt.show()"
    ],
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:15.195777Z",
-     "start_time": "2025-03-13T12:36:14.489182Z"
-    }
-   },
+   "metadata": {},
    "source": [
-    "f, axes = plt.subplots(2, 3, figsize=[15, 10])\n",
     "model_loss_mean = np.mean(model_losses_seeds, axis=1)\n",
     "model_loss_std = np.std(model_losses_seeds, axis=1)\n",
     "model_energy_mean = np.mean(model_energies_seeds, axis=1)\n",
-    "model_energy_std = np.std(model_energies_seeds, axis=1)\n",
-    "\n",
-    "for a, ax in enumerate(axes.flatten()):\n",
-    "    for i, model in enumerate(models):\n",
-    "        label_name = legend_label[i] + task_order[a] if model == \"blocked\" else legend_label[i]\n",
-    "        ax.bar(model, model_energy_mean[a][i], width=0.6, label=\"{}\".format(label_name), color=model_colors[model], edgecolor=\"black\")\n",
-    "        ax.errorbar(model, model_energy_mean[a][i], yerr=model_energy_std[a][i], fmt=\"o\", color=\"black\")\n",
-    "    ax.set_title(task_order_names[a])\n",
-    "    ax.set_ylim([0, 23000])\n",
-    "    ax.set_xticks([])\n",
-    "    ax.ticklabel_format(axis='y', style='sci', scilimits=(0,0))\n",
-    "    ax.legend(title='Models')\n",
-    "f.supylabel('Total energy consumption (neuron activation)', x=0.08)\n",
-    "plt.savefig(\"{}/allseeds-energy.png\".format(plot_subpath), bbox_inches='tight')\n",
-    "plt.show()"
+    "model_energy_std = np.std(model_energies_seeds, axis=1)"
    ],
-   "execution_count": 8,
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# f, axes = plt.subplots(2, 3, figsize=[15, 10])\n",
+    "# for a, ax in enumerate(axes.flatten()):\n",
+    "#     for i, model in enumerate(models):\n",
+    "#         label_name = legend_label[i] + task_order[a] if model == \"blocked\" else legend_label[i]\n",
+    "#         ax.bar(model, model_energy_mean[a][i], width=0.6, label=\"{}\".format(label_name), color=model_colors[model], edgecolor=\"black\")\n",
+    "#         ax.errorbar(model, model_energy_mean[a][i], yerr=model_energy_std[a][i], fmt=\"o\", color=\"black\")\n",
+    "#     ax.set_title(task_order_names[a])\n",
+    "#     ax.set_ylim([0, 23000])\n",
+    "#     ax.set_xticks([])\n",
+    "#     ax.ticklabel_format(axis='y', style='sci', scilimits=(0,0))\n",
+    "#     ax.legend(title='Models')\n",
+    "# f.supylabel('Total energy consumption (neuron activation)', x=0.08)\n",
+    "# plt.savefig(\"{}/allseeds-energy.png\".format(plot_subpath), bbox_inches='tight')\n",
+    "# plt.show()"
+   ],
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:16.202561Z",
-     "start_time": "2025-03-13T12:36:15.196515Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "f, axes = plt.subplots(2, 3, figsize=[15, 10])\n",
     "for a, ax in enumerate(axes.flatten()):\n",
     "    for i, model in enumerate(models):\n",
-    "        label_name = legend_label[i] + task_order[a] if model == \"blocked\" else legend_label[i]\n",
+    "        # label_name = legend_label[i] + task_order[a] if model == \"blocked\" else legend_label[i]\n",
+    "        label_name = legend_label[i]\n",
     "        ax.plot(range(epoch + pre_train), model_loss_mean[a][i], label=\"{}\".format(label_name), color=model_colors[model],  lw=2.5)\n",
     "        ax.fill_between(range(epoch + pre_train), model_loss_mean[a][i] - model_loss_std[a][i],\n",
     "                         model_loss_mean[a][i] + model_loss_std[a][i], alpha=0.2, color=model_colors[model])\n",
     "    ax.set_xlabel(\"Epoch\")\n",
-    "    ax.set_title(task_order_names[a])\n",
-    "    ax.legend(title='Models')\n",
+    "    # ax.set_title(task_order_names[a])\n",
+    "    ax.axvline(x=1000, color='gray', linestyle='--')\n",
+    "    ax.axvline(x=2000, color='gray', linestyle='--')\n",
+    "    # Add text annotations above each region\n",
+    "    ax.text(500, 0.45, task_order_abbrv[a][0], ha='center', fontsize=12)\n",
+    "    ax.text(1500, 0.45, task_order_abbrv[a][0] + \" + \" + task_order_abbrv[a][1], ha='center', fontsize=12)\n",
+    "    ax.text(2500, 0.45, task_order_abbrv[a][0] + \" + \" + task_order_abbrv[a][1] + \" + \" + task_order_abbrv[a][2], ha='center', fontsize=12)\n",
+    "    ax.axvspan(2000, epoch + pre_train, facecolor='gray', alpha=0.2)\n",
+    "    ax.legend(title='Models', loc='upper right', bbox_to_anchor=(1, 1), borderaxespad=0)\n",
     "    ax.set_ylim([0, 0.7])\n",
+    "    ax.set_xlim(right=epoch + pre_train)\n",
     "f.supylabel('Mean Absolute Prediction Error (MAE) (in meters)', x=0.08)\n",
     "plt.savefig(\"{}/allseeds-loss.png\".format(plot_subpath), bbox_inches='tight')\n",
     "plt.show()"
    ],
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-13T12:36:16.205552Z",
-     "start_time": "2025-03-13T12:36:16.203653Z"
-    }
-   },
+   "metadata": {},
    "source": [],
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": []
   }
  ],
